<resources>
    <string name="app_name" translatable="false">EasyBudget</string>
    <string name="action_settings">Settings</string>
    <string name="action_balance">Adjust current balance</string>
    <string name="action_go_to_current_month">Go back to current month</string>
    <string name="action_manage_account">Manage account</string>
    <string name="action_become_premium">Become premium</string>
    <string name="action_mark_all_past_entries_as_checked">Tick all past entries</string>
    <string name="fab_add_expense">Add expense/income</string>
    <string name="fab_add_monthly_expense">Add recurring expense/income</string>
    <string name="title_activity_add_expense">Add expense</string>
    <string name="title_activity_add_income">Add income</string>
    <string name="title_activity_edit_expense">Edit expense</string>
    <string name="title_activity_edit_income">Edit income</string>
    <string name="title_activity_recurring_expense_add">Add recurring expense</string>
    <string name="title_activity_recurring_income_add">Add recurring income</string>
    <string name="title_activity_recurring_expense_edit">Edit recurring expense</string>
    <string name="title_activity_recurring_income_edit">Edit recurring income</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">EasyBudget</string>
    <string name="title_activity_premium">Premium</string>
    <string name="title_activity_login">Google Login</string>
    <string name="title_activity_create_account">Create online account</string>
    <string name="title_activity_manage_account">Manage online account</string>
    <string name="title_activity_monthly_report">Monthly report</string>
    <string name="cancel">Cancel</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="amount">Amount ( %s )</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="payment">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="first_occurence">First instance</string>
    <string name="no_expense_for_today">No income or expense yet.</string>
    <string name="no_description_error">Enter a description</string>
    <string name="no_amount_error">Enter an amount</string>
    <string name="negative_amount_error">Amount should be greater than 0</string>
    <string name="invalid_amount">Not a valid amount</string>
    <string name="expense_add_before_init_date_dialog_title">Warning</string>
    <string name="expense_add_before_init_date_dialog_description">The date of the entry you want to add is before the app setup date.\n\nIt means that the balance you entered when setting up the app will be affected by this entry.\n\nDo you want to continue?\n(You can still change the balance in the menu if you need.)</string>
    <string name="expense_add_before_init_date_dialog_positive_cta">Confirm</string>
    <string name="expense_add_before_init_date_dialog_negative_cta">Cancel</string>
    <string name="expense_check_error_title">Oops</string>
    <string name="expense_check_error_message">An error occurred while checking the expense, please try again (%s)</string>
    <string name="check_all_past_expences_title">Tick all past entries</string>
    <string name="check_all_past_expences_message">Do you want to tick all entries before today?\nYou can\'t cancel this action.</string>
    <string name="check_all_past_expences_confirm_cta">Yes</string>
    <string name="check_all_past_expences_error_title">Oops</string>
    <string name="check_all_past_expences_error_message">An error occurred while ticking all past entries, please try again (%s)</string>
    <string name="dialog_edit_expense_title">What do you want to do?</string>
    <string name="dialog_edit_income_title">What do you want to do?</string>
    <string-array name="dialog_edit_expense_choices">
        <item>Edit expense</item>
        <item>Delete expense</item>
    </string-array>
    <string-array name="dialog_edit_income_choices">
        <item>Edit income</item>
        <item>Delete income</item>
    </string-array>
    <string name="dialog_edit_recurring_expense_title">Recurring expense: What do you want to do?</string>
    <string name="dialog_edit_recurring_income_title">Recurring income: What do you want to do?</string>
    <string-array name="dialog_edit_recurring_expense_choices">
        <item>Edit this instance</item>
        <item>Edit this instance and all following</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string-array name="dialog_edit_recurring_income_choices">
        <item>Edit this instance</item>
        <item>Edit this instance and all following</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string name="expense_delete_snackbar_text">Expense deleted</string>
    <string name="income_delete_snackbar_text">Income deleted</string>
    <string name="adjust_balance_title">Adjust current balance</string>
    <string name="adjust_balance_message">Adjust how much you currently have on your account</string>
    <string name="adjust_balance_expense_title">Balance</string>
    <string name="adjust_balance_snackbar_text">Balance adjusted to %s</string>
    <string name="account_balance_format">Balance on %s:</string>
    <string name="account_balance_checked_format" translatable="false">%1$s (✓ %2$s)</string>
    <string name="account_balance_date_format">MMM dd</string>
    <string name="add_expense_date_format">MMM dd yyyy</string>
    <string name="adjust_limit_warning_title">Change warning threshold for low balance</string>
    <string name="adjust_limit_warning_message">Set the threshold value (must be > 0)</string>
    <string name="adjust_limit_warning_error_title">Oops</string>
    <string name="adjust_limit_warning_error_message">The value you entered is invalid. It must be a positive number, superior to 0</string>
    <string name="adjust_balance_error_title">Oops</string>
    <string name="adjust_balance_error_message">The value you entered is invalid.</string>
    <string name="daily">DAILY</string>
    <string name="monthly">MONTHLY</string>
    <string name="weekly">WEEKLY</string>
    <string name="bi_weekly">2 WEEKS</string>
    <string name="ter_weekly">3 WEEKS</string>
    <string name="four_weekly">4 WEEKS</string>
    <string name="bi_monthly">2 MONTHS</string>
    <string name="ter_monthly">3 MONTHS</string>
    <string name="six_monthly">6 MONTHS</string>
    <string name="yearly">YEARLY</string>
    <string name="recurring_expense_add_loading_title">Loading</string>
    <string name="recurring_expense_add_loading_message">Creating recurring expense…</string>
    <string name="recurring_income_add_loading_message">Creating recurring income…</string>
    <string name="recurring_expense_add_error_title">Oops</string>
    <string name="recurring_expense_add_error_message">An error occurred.</string>
    <string name="recurring_expense_delete_success_message">Recurring expense deleted with success</string>
    <string name="recurring_expense_delete_loading_title">Deleting</string>
    <string name="recurring_expense_delete_loading_message">Deleting recurring expense…</string>
    <string name="recurring_expense_delete_error_title">Oops</string>
    <string name="recurring_expense_delete_error_message">An error occurred.</string>
    <string name="recurring_expense_restoring_loading_title">Canceling</string>
    <string name="recurring_expense_restoring_loading_message">Restoring deleted recurring expense…</string>
    <string name="recurring_expense_restored_success_message">Recurring expense restored with success</string>
    <string name="recurring_expense_restore_error_title">Oops</string>
    <string name="recurring_expense_restore_error_message">An error occurred.</string>
    <string name="recurring_expense_delete_first_error_title">Oops</string>
    <string name="recurring_expense_delete_first_error_message">There are no instances before this one.</string>
    <string name="expense_delete_error_title">Oops</string>
    <string name="expense_delete_error_message">An error occurred.</string>
    <string name="recurring_expense_interval">Interval</string>
    <string name="recurring_interval_daily">Every day</string>
    <string name="recurring_interval_weekly">Every week</string>
    <string name="recurring_interval_bi_weekly">Every 2 weeks</string>
    <string name="recurring_interval_ter_weekly">Every 3 weeks</string>
    <string name="recurring_interval_four_weekly">Every 4 weeks</string>
    <string name="recurring_interval_monthly">Every month</string>
    <string name="recurring_interval_bi_monthly">Every 2 months</string>
    <string name="recurring_interval_ter_monthly">Every 3 months</string>
    <string name="recurring_interval_six_monthly">Every 6 months</string>
    <string name="recurring_interval_yearly">Every year</string>
    <string name="setting_category_app_title">App</string>
    <string name="setting_category_rate_button_title">Like the app?</string>
    <string name="setting_category_rate_button_message">Let me know what you think</string>
    <string name="setting_category_bug_report_send_button_title">Report a bug</string>
    <string name="bug_report_email" translatable="false">easybudget@benoitletondor.com</string>
    <string name="setting_category_bug_report_send_subject" translatable="false">EasyBudget - Bug report</string>
    <string name="setting_category_general_title">General</string>
    <string name="setting_category_limit_set_button_title">Set low balance warning threshold (%s)</string>
    <string name="setting_category_limit_set_button_message">Change the threshold at which you want to be warned about a low balance</string>
    <string name="setting_category_dev_title" translatable="false">Dev</string>
    <string name="setting_category_show_welcome_screen_button_title" translatable="false">Show welcome screen</string>
    <string name="premium_popup_not_premium_title">Become a premium user</string>
    <string name="premium_popup_not_premium_message">Access all the premium features!</string>
    <string name="premium_popup_become_not_now">Not now</string>
    <string name="onboarding_screen_4_title">All set!</string>
    <string name="onboarding_screen_4_message">(That was easy, huh?)</string>
    <string name="onboarding_screen_4_message2">What do you have to do next?</string>
    <string name="onboarding_screen_4_message3">1. Add recurring expenses and incomes (salary, rent, bills…)\n2. Don\'t forget to add your daily expenses and incomes during the day</string>
    <string name="onboarding_screen_4_cta">Let\'s go!</string>
    <string name="monthly_report_button_title">Monthly report</string>
    <string name="expenses_total">Expenses total</string>
    <string name="revenues_total">Revenues total</string>
    <string name="balance">Balance</string>
    <string name="monthly_report_no_entries_placeholder">Nothing for this month.</string>
    <string name="setting_category_bug_report_send_button_key" translatable="false">send_bug_report</string>
    <string name="setting_category_show_welcome_screen_button_key" translatable="false">show_welcome_screen</string>
    <string name="setting_category_limit_set_button_key" translatable="false">limit_set</string>
    <string name="setting_category_currency_change_button_key" translatable="false">change_currency</string>
    <string name="setting_category_dev_key" translatable="false">dev_category</string>
    <string name="setting_category_rate_button_key" translatable="false">rate</string>
</resources>