<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting_category_general_title">

        <Preference android:key="@string/setting_category_currency_change_button_key" />

        <Preference android:key="@string/setting_category_limit_set_button_key"
            android:title="@string/setting_category_limit_set_button_title"
            android:summary="@string/setting_category_limit_set_button_message" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_category_social_title">

        <Preference android:title="@string/setting_category_rate_button_title"
            android:summary="@string/setting_category_rate_button_message"
            android:key="@string/setting_category_rate_button_key" />

        <Preference android:title="@string/setting_category_bug_report_send_button_title"
            android:key="@string/setting_category_bug_report_send_button_key" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_category_dev_title"
        android:key="@string/setting_category_dev_key">

        <Preference android:title="@string/setting_category_show_welcome_screen_button_title"
            android:key="@string/setting_category_show_welcome_screen_button_key" />

        <CheckBoxPreference android:title="@string/setting_category_disable_animation_title"
            android:summaryOn="@string/setting_category_disable_animation_message"
            android:summaryOff="@string/setting_category_disable_animation_message"
            android:key="@string/setting_category_disable_animation_key"
            android:enabled="false"/>

    </PreferenceCategory>


</PreferenceScreen>