<!--
   Copyright 2024 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.main.MainActivity">

    <item
        android:id="@+id/action_manage_account"
        android:title="@string/action_manage_account"
        android:icon="@drawable/ic_baseline_manage_accounts_24"
        android:orderInCategory="40"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_go_to_current_month"
        android:title="@string/action_go_to_current_month"
        android:icon="@drawable/ic_calendar_today"
        android:orderInCategory="50"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_monthly_report"
        android:title="@string/monthly_report_button_title"
        android:icon="@drawable/ic_list_alt_24"
        android:orderInCategory="60"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_balance"
        android:title="@string/action_balance"
        android:orderInCategory="70"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_all_past_entries"
        android:title="@string/action_mark_all_past_entries_as_checked"
        android:icon="@drawable/ic_check_24dp"
        android:orderInCategory="80"
        app:showAsAction="never" />

</menu>
