<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onboarding_4_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.welcome.Onboarding3Fragment">

    <ScrollView android:id="@+id/onboarding_screen4_top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_white_48dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:text="@string/onboarding_screen_4_title"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18dp"
                android:text="@string/onboarding_screen_4_message"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="20dp"
                android:text="@string/onboarding_screen_4_message2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="17dp"
                android:text="@string/onboarding_screen_4_message3"
                android:textColor="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

    </ScrollView>

    <Button android:id="@+id/onboarding_screen4_next_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/onboarding_screen_4_cta"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:background="@drawable/welcome_screen_next_button_1_drawable"
        android:layout_below="@id/onboarding_screen4_top_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-55dp"
        android:textAllCaps="false"/>

</RelativeLayout>
