<!--
   Copyright 2019 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/monthly_report_fragment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"/>

    <LinearLayout android:id="@+id/monthly_report_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp"
                android:baselineAligned="false">

                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monthly_report_categories_title"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/revenues_total"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monthly_report_categories_title"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/expenses_total"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp">

                <TextView android:id="@+id/monthly_report_fragment_revenues_total_tv"
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monthly_report_categories_value"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView android:id="@+id/monthly_report_fragment_expenses_total_tv"
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monthly_report_categories_value"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monthly_report_categories_title"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/balance"
                    android:maxLines="1"/>

                <TextView android:id="@+id/monthly_report_fragment_balance_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/monthly_report_fragment_empty_state"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_date_grey_48dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/placeholder_text"
                android:text="@string/monthly_report_no_entries_placeholder" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/monthly_report_fragment_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@color/window_background" />

    </LinearLayout>

</FrameLayout>