<!--
   Copyright 2015 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PremiumActivity"
    android:background="@color/premium_background"
    android:clipChildren="false">

    <android.support.v4.view.ViewPager
        android:id="@+id/premium_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_star_yellow_48dp"
            android:rotation="45"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_star_yellow_48dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_star_yellow_48dp"
            android:rotation="45" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/premium_popup_not_premium_title"
        android:textSize="23dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="80dp"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:gravity="center"
        android:text="@string/premium_popup_not_premium_message"
        android:maxLines="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="120dp"/>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/premium_view_pager_indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:clipChildren="false">

        <Button android:id="@+id/premium_not_now_button"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/premium_popup_become_not_now"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:layout_marginRight="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:theme="@style/LightGreenButton"/>

        <Button android:id="@+id/premium_cta_button"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/premium_popup_not_premium_cta"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:layout_marginLeft="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:theme="@style/BlueButton"/>

    </LinearLayout>

</FrameLayout>
